--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@
       // Store URL to be picked up after the redirect.
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;http://localhost:4000/index_dev.html">
+    <meta http-equiv="refresh" content="0;/worktime">
   </head>
 </html>
