--- a/404.html
+++ b/404.html
@@ -6,5 +6,12 @@
       sessionStorage.redirect = location.href;
     </script>
     <meta http-equiv="refresh" content="0;/worktime">
+    <!--
+      The purpose of this comment is to make this HTML document larger than
+      512 bytes, so that the file is actually served, instead of a real 404.
+
+      This is apparently an issue for Internet Explorer. I think it may also be
+      occuring on the server side on GitHub Pages.
+    -->
   </head>
 </html>
