Add URL catcher script to index.html

--- a/404.html
+++ b/404.html
@@ -12,6 +12,9 @@
 
       This is apparently an issue for Internet Explorer. I think it may also be
       occuring on the server side on GitHub Pages.
+
+      I don't completely understand it, but this WAS causing problems on
+      GitHub Pages. Increasing the size of this file seems to have fixed the issue.
     -->
   </head>
 </html>
