--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <script>
+      // Catches the URL that was stored just before redirecting.
+      const redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect !== location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    </script>
+  </head>
   <body>
     <script type="module" src="src/index.js"></script>
   </body>
