--- a/404.html
+++ b/404.html
@@ -10,11 +10,7 @@
       The purpose of this comment is to make this HTML document larger than
       512 bytes, so that the file is actually served, instead of a real 404.
 
-      This is apparently an issue for Internet Explorer. I think it may also be
-      occuring on the server side on GitHub Pages.
-
-      I don't completely understand it, but this WAS causing problems on
-      GitHub Pages. Increasing the size of this file seems to have fixed the issue.
+      This is apparently an issue for Internet Explorer.
     -->
   </head>
 </html>
