Leave comment to make index.html > 512 bytes... just in case

--- a/404.html
+++ b/404.html
@@ -10,7 +10,8 @@
       The purpose of this comment is to make this HTML document larger than
       512 bytes, so that the file is actually served, instead of a real 404.
 
-      This is apparently an issue for Internet Explorer.
+      This is apparently an issue for Internet Explorer. I don't know if it is
+      an issue for other browsers, but I will leave this comment here just in case.
     -->
   </head>
 </html>
