Themes, dark mode * Ironed out bugs with themes * Added dark mode * Added really basic tests

--- a/index_dev.html
+++ b/index_dev.html
@@ -17,6 +17,6 @@
         location.reload(true);
       });
     </script>
-    <script type="module" src="src/test.js"></script>
+    <script type="module" src="src/index.js"></script>
   </body>
 </html>
